# beskar7-inspector

./: .gitignore  Cargo.toml  DEPLOYMENT_INSTRUCTIONS.md  Dockerfile  GETTING_STARTED.md  Makefile  README.md  deny.toml  init.sh  modules.list
.github/workflows/: ci.yml  supply-chain.yml
config/: inspector.conf
docs/: README.md  deployment.md  quick-start.md  testing.md
scripts/: 00-init.sh  01-hardware-inspect.sh  02-network-setup.sh  03-report-to-beskar7.sh  04-download-os.sh  05-kexec-boot.sh  utils.sh
src/: client.rs  cmdline.rs  deploy.rs  image.rs  lib.rs  main.rs  modules.rs  net.rs  oem.rs  report.rs  run.rs  secret.rs  smbios.rs  target_disk.rs
src/net/: dhcp.rs  netlink.rs
src/probe/: cpu.rs  disk.rs  memory.rs  mod.rs  nic.rs  system.rs
templates/: boot.ipxe.tmpl
test/contract/: CONTRACT_REF  README.md  golden_boot_cmdline.txt  golden_inspection_report.json  golden_provider_id_artifact.json
tests/: contract.rs
