[package]
name = "beskar7-inspector"
version = "0.1.0"
edition = "2021"
rust-version = "1.74"
license = "Apache-2.0"
description = "Hardware-inspection ramdisk for the Beskar7 Cluster API bare-metal provider"
repository = "https://github.com/projectbeskar/beskar7-inspector"
publish = false

# The crate ships as a static binary used directly as the initramfs /init, but
# is split lib + thin bin so the contract types, probes, client, and kexec
# modules are unit- and contract-testable.
[lib]
name = "beskar7_inspector"
path = "src/lib.rs"

[[bin]]
name = "beskar7-inspector"
path = "src/main.rs"

[dependencies]
# Safe syscall wrappers for the PID 1 deploy path:
#   net    — getifaddrs(3) for the NIC collector's per-interface IPs (sysfs has none)
#   fs     — device-number helpers (major/minor/makedev) for the st_rdev TOCTOU
#            guard on the opened target block device (contract §5)
#   mount  — mount(2)/umount2(2) for the COS_OEM partition (nodev,nosuid,noexec)
#   reboot — reboot(2) into the provisioned OS (§9.1 5.4)
#   ioctl  — the BLKRRPART ioctl that re-reads the freshly-written partition table
# Pinned to the 0.29 line, whose MSRV (1.69) stays within this crate's declared
# rust-version. Safe wrappers are preferred over hand-rolled FFI in a memory-safe
# binary.
nix = { version = "0.29", default-features = false, features = [
    "net",
    "fs",
    "mount",
    "reboot",
    "ioctl",
] }
serde = { version = "1.0", features = ["derive"] }
# Serialize the InspectionReport into the POST body for the callback client
# (src/client.rs). Was a dev-dependency (contract round-trip test only) until the
# client landed; it is now a runtime dependency.
serde_json = "1.0"
thiserror = "2.0"

# Synchronous, rustls-backed HTTP client for the callback POST/GET (contract
# §4.2/§4.3). Chosen over reqwest because the inspector is a sequential PID 1
# init with no need for an async runtime — ureq avoids tokio/hyper, shrinking the
# static binary and the dependency surface. Pinned to the 2.x line: ureq 3.x
# raises its MSRV to 1.85, above this crate's declared 1.74. default-features off
# drops gzip/brotli/cookies/charset we don't need; `tls` re-enables rustls.
ureq = { version = "2.12", default-features = false, features = ["tls"] }
# rustls is a direct dependency so the client can build a ClientConfig whose root
# store trusts ONLY the CA delivered on the cmdline (contract §8). Pinned to the
# 0.23 line ureq uses, so cargo unifies to one rustls. default-features off with
# an explicit `ring` provider keeps aws-lc-rs — which needs a C toolchain and
# complicates the static-musl build — out of the tree entirely.
rustls = { version = "0.23", default-features = false, features = [
    "ring",
    "std",
    "tls12",
    "logging",
] }
# Parse the base64-decoded `beskar7.ca` PEM into certificates for the root store.
rustls-pemfile = "2"
# Incrementally hash the target whole-disk image as it streams to disk, so the
# inspector verifies it against `beskar7.target-digest` without buffering the
# multi-GB body in RAM (contract §8.1). The digest — not TLS — is the image's
# sole integrity/authenticity anchor. RustCrypto's `sha2` is pure-Rust (no C
# toolchain), keeping the static-musl build self-contained.
sha2 = "0.10"
# Decode the base64-encoded `beskar7.ca` PEM string from the cmdline (§5/§8).
base64 = "0.22"

[profile.release]
# The shipped artifact is an initramfs binary: optimize for size and strip.
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
